--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "anakonProject",
-    "short_name": "anakonProject",
+    "name": "АНАКОН",
+    "short_name": "АНАКОН",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "КОМПЛЕКСНОЕ УПРАВЛЕНИЕ НЕДВИЖИМЫМ ИМУЩЕСТВОМ",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
